--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body{
   width: 65%;
   height: 20%;
   z-index: 2;
-  border-radius: 30px;
+  border-radius: 15px;
   background-color: white;
   overflow: hidden;
 }
@@ -33,7 +33,7 @@ body{
 /* ************ Style the Scroll area with hidden scrollBar ********* */
 .scrollArea{
   width: 100%;
-  height: 93vh;
+  height: 88vh;
   background-color: white;
   overflow: auto;
 
@@ -78,4 +78,31 @@ body{
   text-transform: uppercase;
   font-weight: bolder;
   font-size: xx-large;
+}
+
+/* ************ Style the Search area ********* */
+.searchArea{
+  width: 96%;
+  height: auto;
+  align-items: center;
+  margin-top: 15px;
+  margin-left: 13px;
+}
+.searchByName{
+  width: 100%;
+  height: 27px;
+  border: none;
+  border-bottom: 1px solid #dedede;
+}
+::placeholder {
+  color: black;
+  font-size: large;
+  opacity: 1;
+}
+
+input:focus {
+
+  outline: 0;
+  border-bottom: 2px solid black;
+  font-size: large;
 }
