--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body{
 /* ************ Style the Scroll area with hidden scrollBar ********* */
 .scrollArea{
   width: 100%;
-  height: 88vh;
+  height: 71vh;
   background-color: white;
   overflow: auto;
 
@@ -90,6 +90,7 @@ body{
   text-transform: uppercase;
   font-weight: bolder;
   font-size: xx-large;
+  text-decoration-color: black;
 }
 
 .showGrades{
@@ -103,6 +104,9 @@ body{
   font-size: x-large;
   font-weight: bolder;
   color: #808589;
+}
+.iconStyle:hover{
+  cursor: pointer;
 }
 
 .adjustGrades{
@@ -119,11 +123,14 @@ body{
   margin-top: 15px;
   margin-left: 13px;
 }
-.searchByName{
+.searchByName , .searchByTag{
   width: 100%;
   height: 27px;
   border: none;
   border-bottom: 1px solid #dedede;
+}
+.searchByName{
+  margin-bottom: 10px;
 }
 .searchArea ::placeholder {
   color: black;
